[gd_scene load_steps=5 format=3 uid="uid://b7kxn50j6vw0h"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_1dlcc"]
[ext_resource type="Texture2D" uid="uid://c6vu0ps0ykxow" path="res://Sprites/Teacher.png" id="2_rtxel"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yxsp5"]
radius = 225.568

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5big"]
radius = 73.0
height = 488.0

[node name="Teacher" type="CharacterBody2D"]
script = ExtResource("1_1dlcc")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -261.0
offset_right = 185.5
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rtxel")
expand_mode = 1

[node name="View" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
position = Vector2(-160, 0)
shape = SubResource("CircleShape2D_yxsp5")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_k5big")

[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
